examples/good/05-01-while-if.lagger
int main () {
    int i;
    i = 0;
    while (i < 10) {
       if (i % 2 == 0){
            println(i);
       }
	    i = i + 1;
    }
    println(i);
    return 0;
}