examples/bad/09-02-variable-out-of-scope.lagger
int main () {
    int i;
    i = 0;
    while (i < 10) {
       int j = i;
       while (j < 5) {
         j = j+1;
         println("suma");
         println(i+j);
       }

       if (i % 2 == 0){
            println(i);
       }
        i = i + 1;
    }
    println(j);
    println(i);
    return 0;
}